2024-04-19  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha02: Udon';git push
	git tag -a 5.2.5-alpha02 -m 'all: qnt alg nm cf cv; qnt mre';git push --tags

	* Amend all docs to prefer --qnt over --ppc, mention --qnt_alg too

	* Add --qnt_alg to all numerical operators, and --qnt to those and ncremap/ncclimo as well

2024-04-18  Charlie Zender  <zender@uci.edu>

	* Add nco_qnt2baa() to support string-valued specification of NCO-implemented quantization algorithms

	* nco_qnt_mtd() add maximum relative error to NSB methods

2024-04-17  Charlie Zender  <zender@uci.edu>

	* nco_qnt_mtd() use lowercase CF-ized algorithm names per draft CF convention, e.g., "granular_bitRound" instead of "Granular BitRound"

2024-04-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha01: Krugerstraße';git push
	git tag -a 5.2.5-alpha01 -m 'Functionally identical to 5.2.4';git push --tags

	* Replace doe.jpg with doe.png (transparent background)

2024-04-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4: Kamehameha I';git push
	git tag -a 5.2.4 -m 'all: --qnt, NCO client nco_qnt_mtd(); ncclimo/ncremap: dbg; ncclimo: ncap2 cxl rgn_avg hst';git push --tags

2024-04-11  Charlie Zender  <zender@uci.edu>

	* ncclimo: Do not append history for rgn_avg computation---too much like encoding a program in a dataset

2024-04-10  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha03: Seminario';git push
	git tag -a 5.2.4-alpha03 -m 'all: --qnt; ncclimo/ncremap: dbg';git push --tags

	* ncclimo/ncremap: Print IMPORTANT notice about SIMULATION vs. PRODUCTION run when dbg_lvel >= 2

	* ncclimo: Add sanity check that fl_nbr > 0

2024-04-09  Charlie Zender  <zender@uci.edu>

	* all: Add --qnt as synonym for --ppc, --quantize
