@@ -1,8 +1,12 @@
 2024-04-19  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.2.5-alpha03 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha03: Bratislava';git push
+	git tag -a 5.2.5-alpha03 -m '';git push --tags
+
 	* NCO 5.2.5-alpha02 release procedure:
-	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha02: Udon';git push
-	git tag -a 5.2.5-alpha02 -m 'all: qnt alg nm cf cv; qnt mre';git push --tags
+	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha02: Takumi Tonkatsu Ramen';git push
+	git tag -a 5.2.5-alpha02 -m 'all: qnt_alg nm cf cv; qnt mre';git push --tags
 
 	* Amend all docs to prefer --qnt over --ppc, mention --qnt_alg too
 
